# Airport

./: .directory  .gitignore  .gitignore.save  CMakeLists.txt  README.md  TestLevel.lvl
Concepts/: .directory  LICENSE
Documentation/: .directory  CLUT List.txt  Main Menu Structure.txt  MainMenuBtn_AnimationCalc.ods  SW_Design.docx
Fonts/: FONTS_SOURCES  LICENSE
Levels/: CMakeLists.txt  EASY.PLT  LEVEL1.LVL  LEVEL1.PLT  LEVEL18.LVL  LEVEL2.LVL  LEVEL2.PLT  LEVEL3.LVL  TUTORIA1.PLT  XAMI.LVL
Music/: LICENSE  MUSIC_COMMANDS.txt
Music/ffmpeg/: README.txt  ff-prompt.bat
Pseudocode/: GameCartesianToIsometricPos.c
Sounds/: CMakeLists.txt  LICENSE  SOUND_SOURCES  SOUND_SOURCES.txt
Source/: Aircraft.c  Aircraft.h  Airport.geany  Camera.c  Camera.h  EndAnimation.c  EndAnimation.h  Font.c  Font.h  Game.c  Game.h  GameGui.c  GameGui.h  GameStructures.h  Gfx.c  Gfx.h  Global_Inc.h  LoadMenu.c  LoadMenu.h  MainMenuBtnAni.c  MainMenuBtnAni.h  Makefile  MemCard.c  MemCard.h  Menu.c  Menu.h  Message.c  Message.h  PSXSDKIntro.c  PSXSDKIntro.h  Pad.c  Pad.h  PltParser.c  PltParser.h  Serial.c  Serial.h  Sfx.c  Sfx.h  System.c  System.h  (+4 more)
Source/Exe/: AIRPORT.elf  AIRPORT.iso  AIRPORT.s
Source/MapEditor/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  MapEditor.pro  buildings.ini  mainwindow.cpp  mainwindow.h  mainwindow.ui  mygraphicsscene.cpp  mygraphicsscene.h  settings.ini  tileset.ini  ui_mainwindow.h
Source/build-MapEditor-Desktop_Qt_5_12_0_GCC_64bit-Debug/: Makefile  (+4 more)
Sprites/: .directory  ARROW.flags  BCNGW.flags  BLDNGS1.flags  BUBBLE.flags  BUTTONS.flags  CITYBG1.flags  CMakeLists.txt  DEPARR.flags  FONT_1.flags  FONT_2.flags  Font_1.xcf  GAMEPLN.flags  GPL.flags  INTROFNT.flags  LFRARROW.flags  LICENSE  LOADING.flags  MAINMENU.flags  MENUSTAR.flags  MOUSE.flags  OPENSRC.flags  PAGEUPDN.flags  PLANE.flags  PLNBLUE.flags  PSXDISK.flags  TILESET2.flags
cdimg/: SYSTEM.CNF
(+63 files in other folders)
